--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body{
     display: flex;
     flex-direction: column;
     margin: 0;
+    flex: 1;
     
 }
 
@@ -32,6 +33,7 @@ ul{
     gap: 260px;
     background-color: #1f2937;
     color: #e5e7eb;
+    
     
 }
 
@@ -122,7 +124,6 @@ h3{
     padding-left: 200px;
     padding-right: 100px;
     background-color: #e5e7eb;
-    flex: 1;
     margin-top: 50px;
     margin-bottom: 50px;
     
@@ -157,7 +158,6 @@ h3{
     background-color: #3882f6;
     margin: 75px 150px;
     padding: 25px 20px;
-    flex: 1;
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
@@ -225,7 +225,8 @@ h5 {
     flex-direction: column;
     background-color: #1f2937;
     padding-left: 300px;
-    padding-right: 300px
+    padding-right: 300px;
+    
 
 }
 
